--- a/assets/style.css
+++ b/assets/style.css
@@ -841,7 +841,7 @@ header {
 
 /* Media Query */
 
-@media only screen and (max-width: 768px) {
+@media only all and (max-width: 768px) {
 	.search-bar-input {
 		width: 0px;
 	}
