--- a/assets/style.css
+++ b/assets/style.css
@@ -851,7 +851,12 @@ header {
 	}
 
 	.carousel-div {
+		margin-top: 30px;
 		height: 200px;
+	}
+
+	.latest-release-container {
+		padding-right: 30px;
 	}
 
 }
