--- a/assets/playlist-style.css
+++ b/assets/playlist-style.css
@@ -525,7 +525,24 @@ header {
 	height: 65px;
 }
 
-
 .album-artist2:hover .box-shadow-all {
 	box-shadow: 0px 0px 15px rgba(255, 255, 255, 1.0);
+}
+
+
+/* Media Queries */
+
+@media only all and (max-width: 768px) {
+	body {
+		font-size: 0.8em;
+	}
+
+	.main-section {
+		margin-top: 200px;
+	}
+
+	.banner-img {
+		width: 40%;
+		height: 45%;
+	}
 }
